...
val MIN_COLORS = 3
val DEFAULT_SEQ_LENGTH = 4
val DEFAULT_ATTEMPTS = 10
val DEFAULT_COLORS_LIST = listOf("A", "B", "C", "D", "E", "F")

enum class ColorByName(
    val color: Color,
) {
    RED(Color(0xffff3333)),
    GREEN(Color(0xff00c853)),
    BLUE(Color(0xff3232cd)),
    ORANGE(Color(0xffff9800)),
    PINK(Color(0xffff80ab)),
...
                            onClick = {
                                timeManager.pauseTimer()
                                state = DialogState.IS_PAUSED
                            },
                            colors = ButtonDefaults.buttonColors(backgroundColor = Color.LightGray),
                        ) {
                            Text("||", fontWeight = FontWeight.Bold)
                        }
                    } else {
                        Button(
                            onClick = {
                                resetGame()
                            },
...
                    }

                    IconButton(onClick = {
                        timeManager.pauseTimer()
                        state = DialogState.SHOW_SETTINGS
                    }) {
                        Icon(Icons.Default.Settings, contentDescription = "Settings")
                    }

                    IconButton(onClick = {
                        timeManager.pauseTimer()
                        state = DialogState.SHOW_SCORES
                    }) {
                        Icon(Icons.Filled.EmojiEvents, contentDescription = "Trophy")
                    }
                }

                IconButton(
                    onClick = {
                        isMultiplayer = !isMultiplayer
...
                        }
                    },
                ) {
                    if (isMultiplayer) {
                        Icon(Icons.Default.Person, contentDescription = "Single Player")
                    } else {
                        Icon(Icons.Default.Group, contentDescription = "Multiplayer")
                    }
                }
            }
            if (gameOver) {
                Row(
                    modifier = Modifier.align(Alignment.BottomCenter).padding(16.dp),
...
                    Button(
                        onClick = {
                            if (isMultiplayer) closeSession()
                            resetGame()
                        },
                    ) {
                        Text("New Game")
                    }
                    Spacer(modifier = Modifier.width(8.dp))
                    Button(onClick = { exitProcess(0) }) {
                        Text("Exit")
                    }
                }
            } else {
                Row(
                    modifier = Modifier.align(Alignment.BottomCenter).padding(16.dp),
                    verticalAlignment = Alignment.CenterVertically,
...
