...
                            expandedIndex = -1
                        },
                        modifier =
                            Modifier
                                .height(30.dp)
                                .padding(vertical = 2.dp)
                                .testTag("No Color"),
                    ) {
                        Row(verticalAlignment = Alignment.CenterVertically) {
                            RadioButton(
                                selected = color.isEmpty(),
                                onClick = {
                                    currentGuess = currentGuess.toMutableList().apply { set(index, "") }
...
        Button(
            onClick = {
                onSubmitGuess(currentGuess)
                currentGuess = List(guessSize) { "" }
            },
            Modifier.semantics {
                contentDescription = "Submit"
            },
            enabled = currentGuess.none { it.isEmpty() },
        ) {
            Text("Submit")
        }
    }
...
