...
                    description = "Colors Number",
                )
                Spacer(modifier = Modifier.height(16.dp))

                if (showScores) {
                    Column {
                        Text("Scores for chosen parameters:")
                        LazyColumn(modifier = Modifier.height(150.dp)) {
                            items(scores.size) { index ->
                                Text("${index + 1}. ${scores[index]}s")
                            }
                        }
                    }
...
